--- a/songbird/public/index.html
+++ b/songbird/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>Songbird by Anglehart</title>
+    <title>Anthem by Anglehart</title>
   </head>
   <body>
     <div id="root"></div>
